--- a/app/views/explores/_explores.erb
+++ b/app/views/explores/_explores.erb
@@ -10,15 +10,26 @@
                 <div class="influencer-data">
                   <div class="influencer-name" title="<%= influencer.full_name %>"> <%= influencer.full_name %> </div>
                   <p class="influencer-address"><%= influencer.location %></p>
-                  <% categories = (influencer.categories.pluck(:name).join(', ') if influencer.categories.present?) || ''  %>
-                  <p class="influencer-industry" title="<%= categories %>">
-                    <%= categories %>
-                  </p>
+                  <% categories = (influencer.categories.pluck(:name).join(', ') if influencer.categories.present?) || '' %>
+                  <!-- show all industries on click -->
+                  <div class="industry-container">
+                    <p class="influencer-industry">
+                      <%= categories %>
+                    </p>
+                    <span class="title-tooltip">
+                      <%= categories %>
+                    </span>
+                  </div>
+                  <!--end -->
                   <p class="influencer-biography"><%= truncate(influencer.short_bio, length: 100) %> </p>
+
                   <p>
-                    <%= image_tag('explore-followers.png', :alt => 'number-of-follower') %> Total Likes: &nbsp;<%= influencer.max_followers %>
+                    <%= image_tag('explore-followers.png', :alt => 'number-of-follower') %> Total
+                    Likes: &nbsp;<%= influencer.max_followers %>
                   </p>
-                  <p> <%= image_tag('fb-icon.png', :alt => 'number-of-pages') %> Pages: &nbsp;<%= influencer.active_facebook_accounts.count %></p>
+
+                  <p> <%= image_tag('fb-icon.png', :alt => 'number-of-pages') %>
+                    Pages: &nbsp;<%= influencer.active_facebook_accounts.count %></p>
                 </div>
                 <%= link_to 'VIEW PROFILE', influencer_path(influencer), remote: true, :class => 'btn btn-primary btn-view-profile' %>
               </div>
@@ -33,10 +44,10 @@
 </div>
 
 <script type="text/javascript">
-    $(document).ready(function() {
+    $(document).ready(function () {
 
         var view_profile;
-        $('.btn-view-profile').click(function() {
+        $('.btn-view-profile').click(function () {
             view_profile = $(this);
             $(this).attr('disabled', 'disabled');
         });
