copyright time adding dynamically to footer

--- a/app/views/shared/_footer_home_page.html.erb
+++ b/app/views/shared/_footer_home_page.html.erb
@@ -50,7 +50,7 @@
   <div class="footer row">
     <div class="wrapper-content">
       <div class="col-md-6 col-sm-6 col-xs-12 footer-info-padding">
-        All Rights Reserved <span class="rights-reserved">&reg;</span> Brand Reach | Copyright 2015
+        All Rights Reserved <span class="rights-reserved">&reg;</span> Brand Reach | Copyright <%= local_time(Time.now, '%Y') %>
       </div>
       <div class="col-md-2 col-sm-2  col-xs-12 col-md-offset-4 col-sm-offset-4">
         <div class="fb-twitter">
