add dynamic copy right time to admins layout

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -110,7 +110,7 @@
 <!-- /.content-wrapper -->
 <footer class="main-footer">
   <div class="text-center footer-content">
-    All Rights Reserved <span class="rights-reserved">&reg;</span> Brand Reach | Copyright 2015
+    All Rights Reserved <span class="rights-reserved">&reg;</span> Brand Reach | Copyright <%= local_time(Time.now, '%Y') %>
   </div>
 </footer>
 
