change admin section send brand invitation submit button

--- a/app/views/admin/invitations/_brand_invitation_form.html.erb
+++ b/app/views/admin/invitations/_brand_invitation_form.html.erb
@@ -52,8 +52,7 @@
                 <ul id="parsley-id-2000" class="parsley-errors-list"></ul>
               </div>
 
-              <button class="btn btn-modal-submit has-spinner" type="submit">
-                <span class="spinner"><i class="fa fa-spinner fa-spin"></i></span>
+              <button class="br-btn-submit" type="submit">
                 SUBMIT
               </button>
             </form>
