connect facebook page firefox padding issues - solved with line-height: 1 and padding 9

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1759,6 +1759,7 @@ a .offer-box:last-child{
 .btn-inf-fb-connect{
   @extend  .br-btn-primary;
   height: 32px;
+  line-height: 1;
   min-width: 112px;
-  padding: 6px 10px;
+  padding: 9px 10px;
 }
