--- a/app/views/admin/admins/_user.html.erb
+++ b/app/views/admin/admins/_user.html.erb
@@ -23,6 +23,9 @@
         </a>
     <% end %>
   </td>
+  <td>
+    <%= link_to 'DELETE', delete_user_admin_admin_path(id: user.id), method: :delete, remote: true %>
+  </td>
 </tr>
 
 <script>
