--- a/app/views/admin/admins/influencer_list.html.erb
+++ b/app/views/admin/admins/influencer_list.html.erb
@@ -16,6 +16,7 @@
       <th>Company Name</th>
       <th>Date</th>
       <th>Action</th>
+      <th>Action</th>
     </tr>
     </thead>
     <tbody>
