--- a/app/views/admin/admins/brand_list.html.erb
+++ b/app/views/admin/admins/brand_list.html.erb
@@ -19,6 +19,7 @@
       <th>Date</th>
       <th>Reset Password</th>
       <th>Action</th>
+      <th>Action</th>
     </tr>
     </thead>
     <tbody>
