--- a/app/views/admin/admins/delete_user.js.erb
+++ b/app/views/admin/admins/delete_user.js.erb
@@ -1,9 +1,10 @@
 <% if @success %>
-    $('#user-60' + <%= @user.id %>).remove();
+    $('#user-' + <%= @user.id %>).remove();
     $('.modal-container').html("<%= j render(:partial => 'shared/success_message',
                                 :locals => { message: user_delete_success_message }) %>");
 
 <% else %>
-    bootbox.alert({message: <%= @message %>,
+    bootbox.alert({message: '<%= @message %>',
         closeButton: false});
+    window.location.reload();
 <% end %>
