change add account pop-up font family to railway

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1603,6 +1603,10 @@ a .offer-box:last-child{
   width: 14px;
 }
 
+.modal-dialog.add-fb-modal-dialog h4 {
+  font-family: 'Raleway', sans-serif;
+}
+
 // brand reach button design
 /*==== this is basic button design that will inherit all other button */
 .br-btn-primary{
