--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -60,6 +60,11 @@
                 <span class="space-sidebar">Active Influencers</span>
               </a>
             </li>
+            <li class="<%= current_path payment_request_admin_admins_path %>">
+              <a href="<%= payment_request_admin_admins_path %>">
+                <span class="space-sidebar">Payments</span>
+              </a>
+            </li>
         <% end %>
 
         <% if policy(:admin).manage_admins? %>
