show industries list on explore age design change -now full list will be show on mouse hover effect

--- a/app/views/explores/_explores.erb
+++ b/app/views/explores/_explores.erb
@@ -11,9 +11,10 @@
                   <div class="influencer-name" title="<%= influencer.full_name %>"> <%= influencer.full_name %> </div>
                   <p class="influencer-address"><%= influencer.location %></p>
                   <% categories = (influencer.categories.pluck(:name).join(', ') if influencer.categories.present?) || '' %>
+                  <% need_help = categories.size > 30  %>
                   <!-- show all industries on click -->
                   <div class="industry-container">
-                    <p class="influencer-industry">
+                    <p class="influencer-industry <%= need_help ? 'click-able' : '' %>">
                       <%= categories %>
                     </p>
                     <span class="title-tooltip">
