--- a/app/assets/stylesheets/brands-explore.css
+++ b/app/assets/stylesheets/brands-explore.css
@@ -42,13 +42,16 @@
 }
 
 .brands-explore-content-wrapper .influencer-industry {
-    cursor: pointer;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
     height: 20px;
-    text-decoration: underline;
     position: relative;
+}
+
+.brands-explore-content-wrapper .influencer-industry.click-able{
+    cursor: pointer;
+    text-decoration: underline;
 }
 
 .industry-container{
