chang influencer payment request success text to only Paid

--- a/app/views/admin/admins/_payment.html.erb
+++ b/app/views/admin/admins/_payment.html.erb
@@ -11,9 +11,9 @@
 
 
       <% elsif payment.paid? %>
-            <p class="text-success">Paid payment</p>
+            <p class="text-success">Paid</p>
       <% else %>
-          <p class="text-danger">Fail paid payment</p>
+          <p class="text-danger">Fail</p>
       <% end %>
   </td>
 </tr>
