--- a/app/views/admin/admins/make_payment_paid.js.erb
+++ b/app/views/admin/admins/make_payment_paid.js.erb
@@ -1,5 +1,5 @@
 <% if @success %>
-var $successText = $('<p class="text-success">Paid payment</p>');
+var $successText = $('<p class="text-success">Paid</p>');
 $('#payment-' + <%= @payment_request.id %> + ' .js-make-payment-paid').replaceWith($successText);
 $('.modal-container').html("<%= j render(:partial => 'shared/success_message',
                                 :locals => { message: payment_paid_success }) %>");
