--- a/app/views/campaigns/new_brand_payment.html.erb
+++ b/app/views/campaigns/new_brand_payment.html.erb
@@ -43,7 +43,7 @@
   </div>
 
   <div>
-    <p class="influencer-profile-info">
+    <p class="influencer-profile-info payment-profile-info">
       <%= @campaign.receiver.short_bio %>
     </p>
   </div>
