--- a/app/views/campaigns/new_brand_payment.html.erb
+++ b/app/views/campaigns/new_brand_payment.html.erb
@@ -48,7 +48,7 @@
     </p>
   </div>
 
-  <p>
+  <p class="payment-information">
     <br/>
     <strong>Campaign Name :</strong> <%= @campaign.name %><br/>
     <strong>Type of Post :</strong> <%= @campaign.post_type.humanize %><br/>
