--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -1,3 +1,6 @@
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+    font-family: "Raleway", sans-serif;
+}
 .brands-profile-page-wrapper {
     font-family: "Raleway", sans-serif;
     margin: 20px 10px;
