--- a/app/views/campaigns/brand_campaign.html.erb
+++ b/app/views/campaigns/brand_campaign.html.erb
@@ -7,7 +7,7 @@
   <div class="campaign-view">
     <%= form_tag(nil, method: 'get') do %>
         <%= label_tag :name, 'Choose a Campaign' %>
-        <%= select_tag 'id', options_from_collection_for_select(@campaigns, 'id', 'name', @campaign.id), prompt: 'Choose a campaign to view the statistics', id: 'campaign_id' %>
+        <%= select_tag 'id', options_from_collection_for_select(@campaigns, 'id', 'name', @campaign.id), prompt: 'Select all campaign', id: 'campaign_id' %>
         <%= button_tag 'VIEW', class: 'btn-brand-campaign-view' %>
     <% end %>
   </div>
@@ -70,9 +70,6 @@
         <li class="active" id="performance_list">
           <a href="#performance"><span id="performance-blue"><%= image_tag('Performance_blue.png') %></span><span id="performance-black" class="display-none"><%= image_tag('Performance.png') %></span>
             <span class="performance-tab"></span> Performance </a></li>
-        <li class="" id="engagement_list">
-          <a href="#engagement"><span id="engagement-black"><%= image_tag('Engagement_black.png') %></span><span id="engagement-blue" class="display-none"><%= image_tag('Engagement.png') %></span><span class="engagement-tab"></span>
-            Engagement </a></li>
       </ul>
 
       <div class="tab-content panel panel-campaigns">
@@ -81,35 +78,15 @@
 
             <thead>
             <tr class="payment-header">
+              <th id="select_all_performance">
+                <span class="custom-checkbox">
+                    <input type="checkbox" class="payment-header" value="all"/>
+                     <span class="box"><span class="tick"></span></span>
+                </span>
+              </th>
               <th>Campaign Name</th>
               <th>Post Likes</th>
               <th>Reach</th>
-            </tr>
-            </thead>
-
-            <tbody>
-            <tr>
-              <td>
-                <a href="<%= show_user_profile_path(@campaign.receiver.id) %>" data-remote="true">
-                  <%= image_tag(@campaign.receiver.profile_picture, :class => 'pepsi-img-responsive') %>
-                </a>
-                &nbsp; <%= @campaign.name %>
-              </td>
-              <td><%= @campaign.number_of_likes %></td>
-              <td><%= @campaign.number_of_post_reach %></td>
-            </tr>
-            </tbody>
-
-          </table>
-        </div>
-
-        <div id="engagement" class="tab-pane fade">
-          <table class="table table-striped table-bordered table-responsive brand_campaign_engagement_table">
-
-            <thead>
-            <tr class="payment-header">
-              <th>Campaign Name</th>
-              <th>Likes</th>
               <th>Comments</th>
               <th>Shares</th>
             </tr>
@@ -118,12 +95,19 @@
             <tbody>
             <tr>
               <td>
+                  <span class="custom-checkbox">
+                   <input type="checkbox" class="PerformanceCheckBox" data-id="<%= @campaign.id %>" value="1"/>
+                  <span class="box"><span class="tick"></span></span>
+                  </span>
+              </td>
+              <td>
                 <a href="<%= show_user_profile_path(@campaign.receiver.id) %>" data-remote="true">
                   <%= image_tag(@campaign.receiver.profile_picture, :class => 'pepsi-img-responsive') %>
                 </a>
                 &nbsp; <%= @campaign.name %>
               </td>
               <td><%= @campaign.number_of_likes %></td>
+              <td><%= @campaign.number_of_post_reach %></td>
               <td><%= @campaign.number_of_comments %></td>
               <td><%= @campaign.number_of_shares %></td>
             </tr>
@@ -131,6 +115,7 @@
 
           </table>
         </div>
+
       </div>
     </div>
   </div>
@@ -158,23 +143,37 @@
             document.getElementById("engagement-black").style.display = 'inline';
         });
 
+        $("#select_all_performance").change(function () {
+            $(".PerformanceCheckBox").prop('checked', $("#select_all_performance input:checked").length);
+        });
+
         $(".report-generate").click(function () {
             var format = $(this).data('format');
-//
-            var campaign_id = $('#campaign_id option:selected').val();
 
-            switch (format) {
-                case 'pdf':
-                    window.open("<%= export_campaigns_path(format: :pdf) %>?campaign_id=" + campaign_id, '_blank')
-                    break;
-                case 'xls':
-                    window.location.href = "<%= export_campaigns_path(format: :xls) %>?campaign_id=" + campaign_id;
-                    break;
-                case 'csv':
-                    window.location.href = "<%= export_campaigns_path(format: :csv) %>?campaign_id=" + campaign_id;
-                    break;
+            if($('.custom-checkbox input:checked').length)
+            {
+                var campaign_ids = [];
+                $('.custom-checkbox input:checked').each(function() {
+                    campaign_ids.push($(this).data('id'));
+                });
+
+                switch (format){
+                    case 'pdf':
+                        window.open("<%= export_campaigns_path(format: :pdf) %>?campaign_ids=" + campaign_ids, '_blank')
+                        break;
+                    case 'xls':
+                        window.location.href = "<%= export_campaigns_path(format: :xls) %>?campaign_ids=" + campaign_ids;
+                        break;
+                    case 'csv':
+                        window.location.href = "<%= export_campaigns_path(format: :csv) %>?campaign_ids=" + campaign_ids;
+                        break;
+                }
             }
-
+            else
+            {
+                bootbox.alert({message: 'Please select at least one Campaign.',
+                    closeButton: false});
+            }
 
         });
 
